# kuserfeedback

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  INSTALL  KUserFeedbackConfig-Qt6.cmake.in  KUserFeedbackConfig.cmake.in  README.md  UserFeedbackConfig.cmake.in  add_license.sh  composer.json  config-userfeedback-version.h.cmake  config-userfeedback.h.in  metainfo.yaml  org_kde_UserFeedback.categories
analyzer/: CMakeLists.txt  aggregateddatamodel.cpp  aggregateddatamodel.h  categoryaggregationmodel.cpp  categoryaggregationmodel.h  chart.cpp  chart.h  connectdialog.cpp  connectdialog.h  connectdialog.ui  datamodel.cpp  datamodel.h  feedbackconfigdialog.cpp  feedbackconfigdialog.h  feedbackconfigdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  numericaggregationmodel.cpp  numericaggregationmodel.h  product.cpp  product.h  productmodel.cpp  productmodel.h  productschemaentry.cpp  productschemaentry.h  ratioset.cpp  ratioset.h  ratiosetaggregationmodel.cpp  ratiosetaggregationmodel.h  restclient.cpp  restclient.h  sample.cpp  sample.h  schemaeditwidget.cpp  schemaeditwidget.h  schemaeditwidget.ui  schemaentryitemeditorfactory.cpp  schemaentryitemeditorfactory.h  (+14 more)
analyzer/analytics/: aggregator.cpp  aggregator.h  analyticsview.cpp  analyticsview.h  analyticsview.ui  categoryaggregator.cpp  categoryaggregator.h  chartutil.h  numericaggregator.cpp  numericaggregator.h  ratiosetaggregator.cpp  ratiosetaggregator.h  totalaggregator.cpp  totalaggregator.h
analyzer/core/: aggregation.cpp  aggregation.h  aggregationelement.cpp  aggregationelement.h  product.cpp  product.h  productschemaentry.h  ratioset.cpp  ratioset.h  sample.cpp  schemaentry.cpp  schemaentry.h  schemaentrytemplates.cpp  survey.h  util.h
analyzer/model/: aggregateddatamodel.cpp  aggregationeditormodel.cpp  aggregationeditormodel.h  aggregationelementmodel.cpp  aggregationelementmodel.h  categoryaggregationmodel.cpp  datamodel.cpp  datamodel.h  extrarowsproxymodel.h  numericaggregationmodel.h  productmodel.cpp  productmodel.h  ratiosetaggregationmodel.cpp  ratiosetaggregationmodel.h  schemamodel.cpp  schemamodel.h  singlerowfilterproxymodel.cpp  singlerowfilterproxymodel.h  surveymodel.cpp  surveymodel.h  timeaggregationmodel.cpp  timeaggregationmodel.h
analyzer/rest/: restapi.cpp  restapi.h  restclient.cpp  restclient.h
analyzer/schemaeditor/: aggregationeditwidget.cpp  aggregationeditwidget.h  aggregationeditwidget.ui  schemaeditor.cpp  schemaeditor.h  schemaeditor.ui  schemaeditwidget.cpp  schemaeditwidget.h  schemaeditwidget.ui  schemaentryitemeditorfactory.cpp  schemaentrytemplates.cpp  schemaentrytemplates.h  schemaentrytypecombobox.cpp  schemaentrytypecombobox.h
analyzer/schemaentrytemplates/: platform.json  productVersion.json  propertyRatio.json  qtVersion.json  schemaentrytemplates.qrc  screens.json  usageCount.json  usageTime.json
analyzer/schematemplates/: applicationVersion.json  platform.schema  propertyRatio.schema  schematemplates.qrc  screens.json  screens.schema  usageCount.json  usageCount.schema  usageTime.json
analyzer/surveyeditor/: surveydialog.ui  surveyeditor.cpp  surveyeditor.h  surveyeditor.ui
analyzer/widgets/: metaenumcombobox.cpp
autotests/: CMakeLists.txt  abstractdatastoretest.php  aggregationtest.php  categoryaggregationmodeltest.cpp  datamodeltest.cpp  dataset.xml  datasourcetest.cpp  feedbackconfigtest.cpp  numericaggregationmodeltest.cpp  openglinfosourcetest.cpp  productapitest.cpp  productmodeltest.cpp  producttest.cpp  producttest.php  providertest.cpp  ratiosetaggregationmodeltest.cpp  sampletest.cpp  sampletest.php  schemaentryelementtest.php  schemaentrytest.php  schemamodeltest.cpp  schematemplatetest.cpp  selectionratiosourcetest.cpp  servercontroller.cpp  servercontroller.h  serverinfotest.cpp  submittest.cpp  surveyapitest.cpp  surveyprovidertest.cpp  surveytargetexpressiontest.cpp  surveytest.php  timeaggregationmodeltest.cpp  utilstest.php
docs/: CMakeLists.txt  Doxyfile.local  user-feedback-manual.qdoc  user-feedback-manual.qdocconf.in  user-feedback-surveys.qdoc  user-feedback-telemetry.qdoc
provider/core/: CMakeLists.txt  abstractdatasource.cpp  abstractdatasource.h  abstractdatasource_p.h  platforminfosource.cpp  platforminfosource.h  propertyratiosource.cpp  propertyratiosource.h  provider.cpp  provider.h  qtversionsource.cpp  screeninfosource.cpp  screeninfosource.h  surveyinfo.cpp
src/: CMakeLists.txt
src/analyzer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
src/analyzer/analytics/: analyticsview.cpp  analyticsview.h  chartutil.cpp  ratiosetaggregator.h  (+1 more)
src/cli/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  surveytargetexpression.cpp  surveytargetexpressionevaluator.cpp  surveytargetexpressionevaluator.h  surveytargetexpressionlexer.l  surveytargetexpressionparser.cpp  surveytargetexpressionparser.h
src/compat/: qt4compat.h
src/console/: CMakeLists.txt  Messages.sh  UserFeedbackConsole.desktop  connectdialog.cpp  connectdialog.h  connectdialog.ui  helpcontroller.cpp  helpcontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.kde.kuserfeedback-console.appdata.xml  org.kde.kuserfeedback-console.desktop
src/provider/: CMakeLists.txt  Mainpage.dox
src/server/: CMakeLists.txt
src/testserver/: router.php
tests/: CMakeLists.txt  feedbackconfigwidgettest.cpp  notificationpopuptest.cpp  orwell.cpp  orwell.h  orwell.qml
tests/auto/: CMakeLists.txt  aggregationtest.php  categoryaggregationmodeltest.cpp  datamodeltest.cpp  dataset.xml  datasourcetest.cpp  numericaggregationmodeltest.cpp  productapitest.cpp  productmodeltest.cpp  producttest.cpp  producttest.php  providertest.cpp  ratiosetaggregationmodeltest.cpp  sampletest.cpp  sampletest.php  schemaentryelementtest.php  schemaentrytest.php  schemamodeltest.cpp  schematemplatetest.cpp  servercontroller.cpp  servercontroller.h  surveyapitest.cpp  surveytest.php  timeaggregationmodeltest.cpp  utilstest.php
tests/manual/: CMakeLists.txt  orwell.cpp  orwell.h  orwell.ui
tests/server/: router.php
(+428 files in other folders)
