add_subdirectory(common)
add_subdirectory(provider)
add_subdirectory(server)
add_subdirectory(testserver)
list(FIND CMAKE_CXX_COMPILE_FEATURES cxx_generic_lambdas has_generic_lambdas)
if(Qt5Charts_FOUND AND Qt5Svg_FOUND AND Qt5PrintSupport_FOUND AND NOT has_generic_lambdas LESS 0 AND NOT Qt5Core_VERSION LESS 5.8)
    add_subdirectory(console)
    add_subdirectory(cli)
endif()
